docs(index): Update the index; Play around with moving the menu.
Update the index; Play around with moving the menu into the main index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
----
-layout: default
----
-
-Home
+<p>
+  Some random weekend blog...
+  <a href="/writings/">Articles</a>...
+  <a href="/categories/">Categories</a>
+</p>
