style(position image): Position image with links
Position image with links for the rest of the pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+---
+layout: default
+---
 <img src="//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me.jpg" alt="Me laughing at you." class="avatar">
-<p>
-  Some random weekend blog...
-  <a href="/writings/">Articles</a>...
-  <a href="/categories/">Categories</a>
-</p>
+Kaixo!<br>
+<a href="/writings/">Articles</a><br>
+<a href="/categories/">Categories</a>
