--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 ---
 layout: default
 ---
-<img src="//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me.jpg" alt="Me laughing at you." class="avatar">
-Kaixo!<br>
-<a href="/writings/">Articles</a><br>
-<a href="/categories/">Categories</a>
+<div class="media-object">
+  <a href="https://www.linkedin.com/in/seimith/" target="_self">
+    <img src="//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me.jpg" alt="Me laughing at you." class="avatar">
+  </a>
+  <H1>Kaixo!</H1>
+  <a href="/writings/">Articles</a><br>
+  <a href="/categories/">Categories</a>
+</div>
