docs(index): Humanize the index page
Humanize the index page by writing a short blurb next to my avater

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 layout: default
 ---
 <div class="media-object">
-  <a href="https://www.linkedin.com/in/seimith/" target="_self">
-    <img src="//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me.jpg" alt="Me laughing at you." class="avatar">
-  </a>
+  <img src="//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me.jpg" alt="Me laughing at you." class="avatar">
   <H1>Kaixo!</H1>
-  <a href="/writings/">Articles</a><br>
-  <a href="/categories/">Categories</a>
+  <p>I <a href="/writings/">write</a> sometimes (usually to remind myself how to do <a href="/categories/">things</a>).</p>
+  <p>And on <a href="https://twitter.com/themcsuth/">social media</a> I'm pretty dead.</p>
+  <p>- "<a href="https://www.linkedin.com/in/seimith/">Smith</a>".</p>
 </div>
