refactor(index): Add instgram and remove period

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
   <img src="//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me.jpg" alt="Me laughing at you." class="avatar">
   <H1>Kaixo!</H1>
   <p>I <a href="/writings/" target="_self">write</a> sometimes (usually to remind myself how to do <a href="/categories/" target="_self">things</a>).</p>
-  <p>On <a href="https://twitter.com/themcsuth/" target="_blank">social media</a> I'm pretty dead.</p>
-  <p>- "<a href="https://www.linkedin.com/in/seimith/" target="_blank">Smith</a>".</p>
+  <p>On <a href="https://twitter.com/themcsuth/" target="_blank">social</a> <a href="https://www.instagram.com/razzlebeedaz/" target="_blank">media</a> I'm pretty dead.</p>
+  <p>- "<a href="https://www.linkedin.com/in/seimith/" target="_blank">Smith</a>"</p>
 </div>
 <div class="special-treat">
   🍭 Here's a <a href="#" class="treat" target="_blank">video</a>.
