docs(links): Add more personality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="media-object">
   <img src="//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me.jpg" alt="Me laughing at you." class="avatar">
   <H1>Kaixo!</H1>
-  <p>I <a href="/writings/" target="_self" title="Blog posts.">code</a> some things, and I secretly <a href="/designs/" target="_self" title="Sorry, you need a password to see my design work right now.">design</a>.</p>
+  <p>I <a href="/writings/" target="_self" title="Technical posts.">code</a> most of the <a href="/categories/" target="_self" title="All post categories.">time</a>, I <a href="/designs/" target="_self" title="Design related posts.">design</a> sometimes, and I <a href="#" class="weekend">do random stuff</a> on the weekends.</p>
   <p>On <a href="https://twitter.com/themcsuth/" target="_blank" title="Twitter.">social</a> <a href="https://www.instagram.com/razzlebeedaz/" target="_blank" title="The grams.">media</a> I'm pretty dead.</p>
   <p>- "<a href="https://www.linkedin.com/in/seimith/" target="_blank" title="Reach out to me on LinkedIn for work-related inquiries.">Smith</a>"</p>
 </div>
